fix(tests): reemplazar get(0) por getFirst(), quitar imports sin utilizar, anotar método @NonNull.